--- a/static_base/stylesheets/unifi.less
+++ b/static_base/stylesheets/unifi.less
@@ -1,16 +1,6 @@
-/*
-    Global style options
-*/
+@page-left-margin:                6%;
 
-
-/* structural elements */
-@page-background-color:           white;
-@page-left-margin:                10%;
-
-@content-width:                   60%;
-@content-background-color:        white;
-@content-border-color:            rgba( 0, 0, 0, 0.5 );
-@content-border-thickness:        0.2em;
+@content-width:                   70%;
 
 @tag-background-color:            rgba(189, 47, 47, 1);
 @tag-font-color:                  white;
@@ -20,90 +10,41 @@
 @group-font-color:                black;
 @group-color:                     rgb( 230,136,33 );
 
-body {
-    /* visuals */
-    font-family: Arial, sans-serif;
-    background-color: @page-background-color;
-    background-image: url("http://subtlepatterns.com/patterns/lghtmesh.png");
-
-    /* metrics */
-    padding: 1.5em 3em 1.5em @page-left-margin;
-    padding-left: @page-left-margin;
-
-    a {
-        color: rgb( 192, 128, 64 );
-    }
-
-    h1 {
-        font-family: "Georgia", serif;
-        font-style: italic;
-        padding: 0em 1em 1em 0em;
-    }
-
-    h2 {
-        font-family: "Georgia", serif;
-        font-style: italic;
-        padding: 0em 1em 1em 0em;
-        margin: 0em;
-    }
-
-    h3 {
-        font-family: "Georgia", serif;
-        font-style: italic;
-        padding: 0em 1em 1em 0em;
-        margin: 0em;
-    }
-
-    .logo {
-        font-size: 4em;
-        font-weight: bold;
-        font-family: sans-serif;
-    }
-
-
-    .content {
-        /* visuals */
-        border: @content-border-thickness solid @content-border-color;
-        background-color: @content-background-color;
-        /*-webkit-box-shadow: 0em 0.3em 0.3em 0.3em rgba( 0, 0, 0, 0.25 );*/
-
-        /* metrics */
-        width: @content-width;
-        padding: 2% 3% 2% 2%;
-        text-align: left;
-        -moz-border-radius: 0.2em;
-        border-radius: 0.2em;
-    }
+.marked {
+    border: 1px dashed white;
 }
 
-.controls {
-    top: 0.2em;
-    right: 0.2em;
-    position: absolute;
+.login {
+    background-color: #333;
+    padding: 1.5em;
+    border-radius: 0.4em;
+    -moz-border-radius: 0.4em;
+    -moz-box-shadow: 1px 1px 5px #555;
+    -webkit-box-shadow: 1px 1px 5px #555;
+    box-shadow: 1px 1px 5px #555;
+}
 
-    .control {
-        display: inline-block;
-        position: relative;
-        padding: 0.2em;
-        font-size: 0.8em;
-        padding: 0.25em;
-        background-color: rgba( 0, 0, 0, 0.1 );
-        border-radius: 0.2em;
-        -moz-border-radius: 0.2em;
-        cursor: pointer;
-        z-index: 254;
 
-        a {
-            text-decoration: none;
-            color: black;
-        }
+/* */
 
+body {
+    font-family: Arial, sans-serif;
+    padding: 2em 2em 1em @page-left-margin;
+    padding-left: @page-left-margin;
+    background-image: url( "/static/images/bg.png" );
+
+    .content {
+
+        background-color: white;
+        width: @content-width;
+        padding: 2% 1% 4% 1%;
+        text-align: left;
+        -moz-border-radius: 0.6em;
+        border-radius: 0.6em;
+        -moz-box-shadow: 1px 1px 3px #555;
+        -webkit-box-shadow: 1px 1px 3px #555;
+        box-shadow: 1px 1px 3px #555;
     }
-
-    .control#leave {}
-
-    .control#inspect {}
-
 }
 
 /*
@@ -111,186 +52,114 @@ body {
 */
 
 .student {
-    background-color: @student-background-color;
-    color: @student-font-color;
-    font-size: 1.2em;
-    font-style: italic;
     display: inline-block;
-    text-decoration: underline;
     cursor: pointer;
-
+    background-color: @student-background-color;
     margin: 0.1em;
     padding: 0.4em 0.75em 0.4em 0.75em;
     border-radius: 0em 0.4em 0em 0.4em;
     -moz-border-radius: 0em 0.4em 0em 0.4em;
     white-space: nowrap;
+
+    .name {
+        color: @student-font-color;
+        font-size: 1.2em;
+        font-style: italic;
+        text-decoration: underline;
+    }
+
+    .badges {
+        padding-left: 0.4em;
+    }
+
 }
 
 .wish {
+
     border-radius: 0.2em;
     -moz-border-radius: 0.2em;
     padding: 0.5em 2em 0.5em 0.5em;
     margin: 0.5em;
     border: 0.08em dotted rgba( 0, 0, 0, 0.15 );
-    position: relative;
     background-color: white;
+    position: relative;
 
-    .delete {
-        width: 1.5em;
-        text-align: center;
-        position: absolute;
-        display: inline-block;
+    .actions {
+        cursor: pointer;
         top: 0.2em;
-        right: 0.2em;
-        font-size: 0.8em;
-        padding: 0.25em;
-        background-color: rgba( 0, 0, 0, 0.1 );
-        border-radius: 0.2em;
-        -moz-border-radius: 0.2em;
-        cursor: pointer;
+        right: 0.4em;
+        position: absolute;
+        z-index: 254;
     }
 }
 
-.login {
+.new {
+    cursor: text;
+    padding-bottom: 3.2em;
 
-    label {
-        color: white;
-        font-size: 0.7em;
-        float: left;
+    ul.ui-autocomplete {
+        background-color: rgba( 255, 255, 255, 0.75 );
     }
 
-    div {
-        text-align: right;
-    }
-
-    input[type=text], input[type=password] {
+    .tagit-input {
+        background-color: rgba( 0, 0, 0, 0.0 );
         border: none;
-        background-color: rgba( 255, 255, 255, 0.12 );
-        color: white;
-        font-style: italic;
-        border-radius: 0.3em;
-        -moz-border-radius: 0.3em;
-        padding: 0.3em;
+        -moz-box-shadow: none;
+        -webkit-box-shadow: none;
+        box-shadow: none;
     }
-
-}
-
-.login_overlay {
-
-    font-size: 1.2em;
-    text-align: center;
-    /* margin: 10% 40% 5% 15%; */
-    border-radius: 1em;
-    -moz-border-radius: 1em;
-    padding: 3.75em 2.2em 5em 2.2em;
-    background-color: rgba( 66, 66, 66, 0.25 );
-    border: 0.4em solid rgba( 66, 66, 66, 0.40 );
-    -moz-box-shadow: 1px 1px 10px rgb( 128, 128, 128 );
-    -webkit-box-shadow: 1px 1px 10px rgb( 128, 128, 128 );
-    box-shadow: 1px 1px 10px rgb( 128, 128, 128 );
-    position: fixed;
-    z-index: 255;
-    top: 10%;
-    left: 15%;
-
-    input {
-        border: none;
-        font-size: 1.2em;
-        padding: 0.4em;
-        padding-top: 0.5em;
-        border-radius: 0.2em;
-        -moz-border-radius: 0.2em;
-        border: 2pt solid rgb( 128, 128, 128 );
-
-    }
-
-    input {
-        font-style: italic;
-    }
-
-    input[type=text], input[type=password] {
-        width: 97%;
-        border-bottom: 5pt solid rgb( 128, 128, 128 );
-    }
-
-    input[type=submit] {
-        padding: 0.4em 1.4em 0.4em 1.4em;
-        border-radius: 0.8em;
-        -moz-border-radius: 0.8em;
-        color: rgb( 0, 128, 0 );
-        cursor: pointer;
-    }
-
-    .row {
-        padding-bottom: 1em;
-        text-align: left;
-    }
-
-    .right {
-        text-align: right;
-    }
-
-    label {
-        font-size: 0.8em;
-        color: white;
-        padding: 0.4em 0.8em 1em 0.8em;
-        background-color: rgb( 128, 128, 128 );
-        border-radius: 0.4em 0.4em 0em 0em;
-        -moz-border-radius: 0.4em 0.4em 0em 0em;
-    }
-
 }
 
 .group {
+
+    background-color: white;
+    border: 0.08em solid @group-color;
+    border-left: 0.4em solid @group-color;
+    border-right: 0.4em solid @group-color;
     margin: 0.5em;
     padding: 0.75em 0.75em 0.75em 0.75em;
     padding-bottom: 4em;
     border-radius: 0.6em;
     -moz-border-radius: 0.6em;
-    border: 0.08em solid @group-color;
-    border-left: 0.4em solid @group-color;
-    border-right: 0.4em solid @group-color;
-    background-color: white;
     position: relative;
     overflow: auto;
 
     .number {
+        color: rgba( 0, 0, 0, 0.1 );
         position: absolute;
-        bottom: 0.3em;
-        right: 0.3em;
+        bottom: 0.6em;
+        right: 0.4em;
         float: right;
         font-size: 2.8em;
         font-style: italic;
-        font-family: "Georgia", serif;
         font-weight: bold;
-        color: rgba( 0, 0, 0, 0.1 );
     }
 
     .menu {
+        background-color: @group-color;
+        color: white;
         position: absolute;
         bottom: 0em;
         left: 0.75em;
-        background-color: @group-color;
-        color: white;
         font-size: 1em;
         border-radius: 0.4em 0.4em 0em 0em;
         -moz-border-radius: 0.4em 0.4em 0em 0em;
-        padding: 0.2em 0.5em 0em 0.5em ;
+        padding: 0.2em 1em 0em 1em;
         width: 80%;
         font-weight: bold;
         white-space: nowrap;
+        display: none;
         cursor: pointer;
 
         .control {
+            background-color: orange;
             font-size: 0.8em;
-
             float: left;
             padding: 0.5em 0.8em 0.5em 0.8em;
             margin: 0.5em 0.5em 0em 0.5em;
             -moz-box-shadow: 1px 1px 10px orangered;
             -webkit-box-shadow: 1px 1px 10px orangered;
             box-shadow: 1px 1px 10px orangered;
-            background-color: orange;
             border-radius: 0.4em 0.4em 0em 0em;
             -moz-border-radius: 0.4em 0.4em 0em 0em;
         }
@@ -303,25 +172,14 @@ body {
 
 }
 
-
-
-
-.oracle {
-    display: inline-block;
-    padding: 0.4em 0.4em 0.4em 0.4em;
-    background-color: rgba(200, 100, 50, 0.25);
-    border-radius: 0.2em;
-    -moz-border-radius: 0.2em;
-}
-
 .tag {
+    background-color: @tag-background-color;
+    color: @tag-font-color;
     display: inline-block;
     padding: 0.4em 0.4em 0.4em 0.4em;
     margin: 0.15em;
     border: none;
     white-space: nowrap; /* important */
-    background-color: @tag-background-color;
-    color: @tag-font-color;
 
     border-radius: 0.2em;
     -moz-border-radius: 0.2em;
@@ -335,105 +193,56 @@ body {
     
 }
 
+/* Containers */
 
+.students {}
 
+.wishes {}
 
-/* containers */
+.tags {
 
-    .students {}
+    .tag {
+        display: inline-block;
+        padding: 0.4em 0.4em 0.4em 0.4em;
+        margin: 0.3em 0em 0.3em 0em;
+        border: none;
 
-    .wishes {}
-
-    .tags {
-        .tag {
-            display: inline-block;
-            padding: 0.4em 0.4em 0.4em 0.4em;
-            margin: 0.3em 0em 0.3em 0em;
-            border: none;
-
-            border-radius: 0.2em;
-            -moz-border-radius: 0.2em;
-            cursor: pointer;
-        }
+        border-radius: 0.2em;
+        -moz-border-radius: 0.2em;
+        cursor: pointer;
     }
+}
 
+.groups {
 
-    .oracles {}
-    .groups{
-        overflow: hidden;
-
-        .leave {
-            float: right;
-        }
-    }
-
-/* creation forms */
-
-    .new_wish {
-        text-align: center;
-
-        input[type="submit"] {
-            font-weight: bold;
-            width: 90%;
-        }
-    }
-
-
-
-/*
-    Control-specific applications
-*/
-
-.match {}
-
-.prototype {}
-
-.util {
-
-    .login {}
-
-    .communication {}
+    overflow: hidden;
 
 }
 
+/* Creation forms */
 
-/*
-    View-specific applications
-*/
+
+
+/* Control-specific applications */
 
 .my {}
 
 
-
-
-/*
-    Various
-*/
-
-
-.oracle_badge {}
-
-.bubble {
-    float: left;
-}
-
-
+/* General interface elements */
 
 .bar {
     display: inline;
     float: right;
 
     .navigation, .status, .focus {
+        background-color: #111;
+        color: white;
         position: fixed;
         border-radius: 0.5em;
         -moz-border-radius: 0.5em;
         padding: 0.5em;
-        background-color: #111;
-        color: white;
         z-index: 500;
     }
-
-
 
     @navigation-height: 1em;
     .navigation {
@@ -441,8 +250,8 @@ body {
         right: 1em;
 
         a {
-            text-decoration: none;
             color: #CCC;
+            text-decoration: none;
             margin-right: 2em;
         }
     }
@@ -469,109 +278,8 @@ body {
 }
 
 .graph {
+    background-color: rgba( 0, 0, 0, 0.1 );
     margin: 1em;
     text-align: center;
-    background-color: rgba( 0, 0, 0, 0.1 );
     border: 0.08em dotted rgba( 0, 0, 0, 0.1 );
-}
-
-.greeting {
-    padding: 1em;
-}
-
-.column_container {
-
-
-    .column {
-        width: auto;
-        text-align: left;
-        display: block;
-        border: 0.1em solid rgba( 0, 0, 0, 0.1 );
-        background-color: rgb( 240, 240, 240 );
-        padding: 1em;
-        padding-top: 3.5em;
-        margin: 0.75em;
-        border-radius: 0.2em;
-        -moz-border-radius: 0.2em;
-        position: relative;
-        z-index: 50;
-
-        .title {
-            font-size: 1.5em;
-            font-weight: bold;
-            font-style: italic;
-            padding: 0em 1em 1em 0em;
-            margin: 0em;
-            border-radius: 0em 0em 0em 0.5em;
-            -moz-border-radius: 0em 0em 0em 0.5em;
-            background-color: rgba( 0, 0, 0, 0.1 );
-            padding: 0.5em;
-            position: absolute;
-            top: 0;
-            right: 0;
-            clear: both;
-
-        }
-
-    }
-
-    .column#tagit {
-    
-        .tagit#mytags {
-                        
-            border: 0.1em solid rgba( 255, 0, 0, 0.5 );
-            border-bottom: 0.25em solid rgba( 192, 0, 0, 1 );
-            background-image: url( 'http://subtlepatterns.com/patterns/light_noise_diagonal.png' );
-            padding: 0.4em;
-            cursor: text;
-            
-            ul.ui-autocomplete {
-                background-color: rgba( 255, 255, 255, 0.75 );                
-            }
-            
-            .tagit-input {
-                background-color: rgba( 0, 0, 0, 0.0 )
-            }
-
-            
-            
-        }
-        
-        input[type=submit] {
-            font-size: 1.3em;
-            font-weigth: normal;
-            font-style: italic;
-            font-family: Arial, sans;
-            padding: 0.5em;
-            border: none;
-            border-radius: 0.5em;
-            -moz-border-radius: 0.5em;
-            background-color: rgba( 0, 0, 0, 0.1 );
-            cursor: pointer;
-        }
-
-    }
-
-    .column#group {
-
-    }
-
-    .column#wish {
-
-    }
-
-    .column#oracle {
-        clear: both;
-    }
-
-    .help {
-        font-size: 0.8em;
-        padding-right: 1em;
-    }
-
-    .count {
-        color: rgba( 0, 0, 0, 0.5 );
-        font-style: italic;
-    }
-
 }
