--- a/templates/wish/wish.html
+++ b/templates/wish/wish.html
@@ -10,7 +10,7 @@
     <!-- menu -->
     {% if delete %}
     <div class="actions">
-        <button id="delete" pk="{{ wish.pk }}" class="close">&times;</button>
+        <button id="delete" pk="{{ wish.pk }}" class="close"><i class="icon icon-trash"></i></button>
     </div>
     {% endif %}
     <!-- menu -->
