--- a/static_base/stylesheets/unifi.less
+++ b/static_base/stylesheets/unifi.less
@@ -1,5 +1,3 @@
-@page-left-margin:                6%;
-
 @content-width:                   70%;
 
 @tag-background-color:            rgba(189, 47, 47, 1);
@@ -29,8 +27,7 @@
 
 body {
     font-family: Arial, sans-serif;
-    padding: 2em 2em 1em @page-left-margin;
-    padding-left: @page-left-margin;
+    padding: 2em 2em 1em 2em;
     background-image: url( "/static/images/bg.png" );
 
     .content {
@@ -94,14 +91,30 @@ body {
 }
 
 .new {
-    cursor: text;
+
     padding-bottom: 3.2em;
+
+    .tagit {
+        cursor: text;
+        border-radius: 0.2em;
+        -moz-border-radius: 0.2em;
+        padding: 0.5em 0.5em 0.5em 0.5em;
+        border: 0.08em dotted rgba( 0, 0, 0, 0.15 );
+    }
 
     ul.ui-autocomplete {
         background-color: rgba( 255, 255, 255, 0.75 );
     }
 
     .tagit-input {
+        background-color: rgba( 0, 0, 0, 0.0 );
+        border: none;
+        -moz-box-shadow: none;
+        -webkit-box-shadow: none;
+        box-shadow: none;
+    }
+
+    .tagit-input:focus {
         background-color: rgba( 0, 0, 0, 0.0 );
         border: none;
         -moz-box-shadow: none;
@@ -147,7 +160,7 @@ body {
         padding: 0.2em 1em 0em 1em;
         width: 80%;
         font-weight: bold;
-        white-space: nowrap;
+
         display: none;
         cursor: pointer;
 
@@ -162,10 +175,6 @@ body {
             box-shadow: 1px 1px 10px orangered;
             border-radius: 0.4em 0.4em 0em 0em;
             -moz-border-radius: 0.4em 0.4em 0em 0em;
-        }
-
-        .control#leave {
-            float: right;
         }
 
     }
