--- a/templates/group/group.html
+++ b/templates/group/group.html
@@ -8,23 +8,29 @@
     <!-- menu -->
     <div class="menu" pk="{{ group.pk }}">
         <div class="btn-toolbar">
-            <div class="btn-group dropup">
-                <button class="btn btn-mini">Endre</button>
-                <button class="btn btn-mini dropdown-toggle" data-toggle="dropdown">
-                    <span class="caret"></span>
+            <div class="btn-group">
+                <button class="btn btn-warning btn-mini" id="inspect">
+                    <i class="icon-eye-open icon-white"></i>
+                    Undersøk
                 </button>
-                <ul class="dropdown-menu">
-                    <li><a id="inspect"><i class="icon-eye-open pull-right"></i>Se på</a></li>
-                    <li><a id="contact"><i class="icon-envelope pull-right"></i>Kontakt</a></li>
-                    <li><a id="require_assistance"><i class="icon-question-sign pull-right"></i>Hjelp</a></li>
-                </ul>
+                <button class="btn btn-warning btn-mini" id="contact">
+                    <i class="icon-envelope icon-white"></i>
+                    Kontakt
+                </button>
+                <button class="btn btn-success btn-mini" id="assist">
+                    <i class="icon-question-sign icon-white"></i>
+                    Be om hjelp
+                </button>
             </div>
-            <button class="btn btn-warning btn-mini pull-right" id="leave">Meld deg av</button>
+            <div class="btn-group pull-right">
+                <button class="btn btn-danger btn-mini" id="leave">
+                    <i class="icon-remove icon-white pull-right"></i>
+                    Forlat&nbsp;&nbsp;
+                </button>
+            </div>
         </div>
     </div>
     {% endif %}
-
-
 
     <div class="number">{{ group.pk }}</div>
     <!-- users -->
