cleans up the javascript code

--- a/templates/group/group.html
+++ b/templates/group/group.html
@@ -17,7 +17,7 @@
                     <i class="icon-envelope icon-white"></i>
                     Kontakt
                 </button>
-                <button class="btn btn-success btn-mini" id="assist">
+                <button class="btn btn-success btn-mini" id="assist" data-toggle="button">
                     <i class="icon-question-sign icon-white"></i>
                     Be om hjelp
                 </button>
