--- a/templates/login/login.html
+++ b/templates/login/login.html
@@ -11,7 +11,7 @@
 
 <div class="container-fluid">
     <div class="login pull-right span6">
-        <div class="row-fluid">
+        <div class="row">
             <form class="form-inline pagination-centered" method="POST" action="/login/enter/">{% csrf_token %}
                 <input name="username" type="text" class="input-medium" placeholder="brukernavn" tabindex="1" />
                 <input name="password" type="password" class="input-medium" placeholder="passord" tabindex="2" />
