--- a/templates/wish/wishes.html
+++ b/templates/wish/wishes.html
@@ -1,7 +1,7 @@
 {% comment %}
 {% endcomment %}
 
-{% block students %}
+{% block persons %}
 <div class="wishes">
 {{ message }}
 {% for wish in wishes|dictsortreversed:"since" %}
