creates some facilities for a triggered matching; the triggered matching is a process used in development, unlike the regular matching that will be created for the production stage

--- a/templates/header/import.html
+++ b/templates/header/import.html
@@ -32,6 +32,7 @@
     <!-- project specific scripts -->
     <script src="{{ STATIC_URL }}javascripts/django-csrf.js"></script>
     <script src="{{ STATIC_URL }}javascripts/unifi.js"></script>
+    <script src="{{ STATIC_URL }}javascripts/my.js"></script>
 
 
     <!-- other stylesheets -->
