--- a/templates/group/group.html
+++ b/templates/group/group.html
@@ -13,11 +13,13 @@
                     <i class="icon-eye-open icon-white"></i>
                     Undersøk
                 </button>
-                <button class="btn btn-warning btn-mini" id="contact">
+                <a class="btn btn-warning btn-mini" id="contact" href="#contactPopup" role="button" class="btn" data-toggle="modal">
                     <i class="icon-envelope icon-white"></i>
                     Kontakt
-                </button>
-                <button class="btn btn-success btn-mini" id="assist" data-toggle="button">
+                </a>
+                <button class="btn btn-success btn-mini
+                {% if group.needs_assistance %}active{% endif %}
+                " id="assist" data-toggle="button">
                     <i class="icon-question-sign icon-white"></i>
                     Be om hjelp
                 </button>
