--- a/templates/header/navigation.html
+++ b/templates/header/navigation.html
@@ -6,10 +6,13 @@
 <div class="bar">
     <div class="navigation">
         <!-- group -->
-        <a class="button" href="/group/all">Groups</a>
+        <a class="button" href="/group/all">View Groups</a>
+        <a class="button" href="/match/">Match</a>
         <!-- prototype -->
         <a class="button" href="/login/leave/">Leave</a>
+
     </div>
 </div>
+
 {% endif %}
 {% endblock %}
