--- a/templates/my/contact.html
+++ b/templates/my/contact.html
@@ -1,9 +1,18 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title></title>
-</head>
-<body>
-
-</body>
-</html>
+<div class="modal hide fade" id="contactPopup" tabindex="-1" role="dialog" aria-labelledby="contactPopup" aria-hidden="true">
+    <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+        <h3>Kontakt</h3>
+    </div>
+    <div class="modal-body">
+        <div class="row-fluid">
+            <form action="/my/" method="POST">
+                {% csrf_token %}
+                <textarea rows="10" class="span12" disabled="1"></textarea>
+            </form>
+        </div>
+    </div>
+    <div class="modal-footer">
+        <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
+        <button class="btn btn-primary">Send</button>
+    </div>
+</div>
