--- a/templates/wish/new.html
+++ b/templates/wish/new.html
@@ -11,10 +11,10 @@
             <li class="tagit-new"></li>
         </ul>
         <div class="btn-toolbar">
-        <button class="btn btn-large btn-info disabled span3" type="button" tabindex="3">
+        <a href="/my/search/" class="btn btn-large btn-info span3 disabled" type="button" tabindex="3">
             <i class="icon-white icon-search pull-left"></i>
             Søk
-        </button>
+        </a>
         <button class="btn btn-large btn-success span9 pull-right" onclick="submit()" tabindex="2">
             <i class="icon-white icon-ok pull-right"></i>
             Registrér
