--- a/templates/my/index.html
+++ b/templates/my/index.html
@@ -24,7 +24,7 @@
                     <button type="button" class="close" data-dismiss="alert">×</button>
                     Dette feltet viser gruppene du allerede er medlem av.
                     Du kan blant annet kontakte alle brukere på gruppen gjennom
-                    et meny som vises når du holder musepekeren over en gruppe.
+                    et meny som vises når du holder musepekeren over.
                 </div>
                 <div id="groups"></div>
             </div>
@@ -34,9 +34,9 @@
             <h3>Dine ønsker</h3>
             <div class="alert alert-warning">
                 <button type="button" class="close" data-dismiss="alert">×</button>
-                Ønskene beskriver emnene du er interessert i.
-                Brukere med like ønsker blir du matchet mot dine, slik at dere
-                kan danne en gruppe sammen.
+                Ønskene beskriver emnene du er interessert i og gruppene du
+                er på utkikk etter. Brukere med like ønsker blir matchet mot
+                dine, slik at dere kan danne en gruppe sammen.
             </div>
             <div id="wishes"></div>
         </div>
