--- a/templates/wish/new.html
+++ b/templates/wish/new.html
@@ -5,7 +5,7 @@
 
 {% block new %}
 <div class="new">
-    <form action="/person/wish/create" method="POST" class="tagit_form" id="tagit_form">
+    <form action="/my/wish/create" method="POST" class="tagit_form" id="tagit_form">
         {% csrf_token %}
         <ul id="mytags" class="tagit ui-widget ui-widget-content ui-corner-all">
             <li class="tagit-new"></li>
