clique comparison enabled

--- a/templates/group/all.html
+++ b/templates/group/all.html
@@ -4,6 +4,8 @@
 {% endcomment %}
 
 {% block content %}
-{% include "group/groups.html" %}
+{% with join=1 %}
+    {% include "group/groups.html" %}
+{% endwith %}
 {% endblock %}
 
