--- a/templates/header/status.html
+++ b/templates/header/status.html
@@ -10,7 +10,7 @@
 <div class="bar">
     <div class="status navbar-inverse">
         <div><span class="person" pk="{{ user.pk }}">{{ user }}</span></div>
-        <a href="/my"><img class="portrait" src="{{ STATIC_URL }}images/users/{{ user.pk }}.png" alt="" /></a>
+        <a href="/my"><img class="img-rounded" src="http://placehold.it/100x100" alt="" /></a>
     </div>
 </div>
 {% else %}
