--- a/templates/my/index.html
+++ b/templates/my/index.html
@@ -13,8 +13,8 @@
                 <div class="alert alert-info">
                     <button type="button" class="close" data-dismiss="alert">×</button>
                     Skriv inn emnene du ønsker å samarbeide om i feltet under.
-                    Du bør skrive emnene i form av nøkkelord eller fraser (tagger).
-                    Bruk mest entall.
+                    Du bør skrive emnene i form av nøkkelord eller fraser (tagger), og
+                    helst i entall.
                 </div>
                 {% include "wish/new.html" %}
             </div>
@@ -42,8 +42,6 @@
         </div>
     </div>
 </div>
-
-{% include "my/contact.html" %}
 
 
 {% endblock %}
