--- a/templates/tag/tag.html
+++ b/templates/tag/tag.html
@@ -2,5 +2,5 @@
 {% endcomment %}
 
 {% block tag %}
-<span class="tag" pk="{{ tag.pk }}">{{ tag.name }}</span>
+<span class="tag" pk="{{ tag.pk }}" popularity="{{ tag.popularity }}">{{ tag.name }}</span>
 {% endblock %}
