--- a/templates/wish/wishes.html
+++ b/templates/wish/wishes.html
@@ -4,9 +4,11 @@
 {% block persons %}
 <div class="wishes">
 {{ message }}
-{% for wish in wishes|dictsortreversed:"since" %}
+{% for wish in wishes|dictsortreversed:"created" %}
     {% if wish.is_active %}
+    {% if wish.is_matched != True %}
     {% include "wish/wish.html" %}
+    {% endif %}
     {% endif %}
 {% endfor %}
 </div>
