integrates twitter and google OAuth services

--- a/templates/header/navigation.html
+++ b/templates/header/navigation.html
@@ -6,8 +6,7 @@
 <div class="bar">
     <div class="navigation">
         <!-- group -->
-        <a class="button" href="/group/all">View Groups</a>
-        <a class="button" href="/match/">Match</a>
+        <a class="button" href="/group/all">Groups</a>
         <!-- prototype -->
         <a class="button" href="/login/leave/">Leave</a>
 
