--- a/templates/login/login.html
+++ b/templates/login/login.html
@@ -9,6 +9,8 @@
 <body>
 
 
+{% load openid twitter %}
+
 <div class="container-fluid">
     <div class="login pull-right span6">
         <div class="row">
@@ -16,6 +18,16 @@
                 <input name="username" type="text" class="input-medium" placeholder="brukernavn" tabindex="1" />
                 <input name="password" type="password" class="input-medium" placeholder="passord" tabindex="2" />
                 <button type="submit" class="btn" tabindex="3">Logg inn</button>
+            </form>
+        </div>
+        <div class="row-fluid">
+            <div class="form-inline pagination-centered">{% twitter_button %}</div>
+            <form class="form-inline pagination-centered" action="{% url socialregistration:openid:redirect %}" method="post">{% csrf_token %}
+                <input type="hidden" name="openid_provider" value="http://www.google.com/accounts/o8/id" />
+                <button class="btn btn-info" type="submit">
+                    <i class="icon icon-user icon-white"></i>
+                    Logg inn med Google OpenID
+                </button>
             </form>
         </div>
         <div class="row-fluid">
