--- a/templates/login/login.html
+++ b/templates/login/login.html
@@ -14,17 +14,24 @@
 <div class="container-fluid">
     <div class="login pull-right span6">
         <div class="row">
-            <form class="form-inline pagination-centered" method="POST" action="/login/enter/">{% csrf_token %}
+            <form class="form-inline pagination-centered" method="post" action="/login/enter/">{% csrf_token %}
                 <input name="username" type="text" class="input-medium" placeholder="brukernavn" tabindex="1" />
                 <input name="password" type="password" class="input-medium" placeholder="passord" tabindex="2" />
                 <button type="submit" class="btn" tabindex="3">Logg inn</button>
             </form>
         </div>
         <div class="row-fluid">
-            <div class="form-inline pagination-centered">{% twitter_button %}</div>
+            <div class="form-inline pagination-centered">
+                <form class="connect-button" name="login" method="post" action="{% url socialregistration:twitter:redirect %}">{% csrf_token %}
+                    <button class="btn btn-info input-xlarge" onclick="this.form.submit();">
+                        <i class="icon icon-user icon-white"></i>
+                        Logg inn med Twitter OAuth
+                    </button>
+                </form>
+            </div>
             <form class="form-inline pagination-centered" action="{% url socialregistration:openid:redirect %}" method="post">{% csrf_token %}
                 <input type="hidden" name="openid_provider" value="http://www.google.com/accounts/o8/id" />
-                <button class="btn btn-info" type="submit">
+                <button class="btn btn-info input-xlarge" type="submit">
                     <i class="icon icon-user icon-white"></i>
                     Logg inn med Google OpenID
                 </button>
