introduces new WishManager-class to facilitate the operations on multiple objects; fixes the match interruption bug that caused graph to be empty on consecutive matching rounds

--- a/templates/group/group.html
+++ b/templates/group/group.html
@@ -58,7 +58,7 @@
     {% include "person/persons.html" with persons=group.persons.all %}
     </div>
     <!-- tags -->
-    {% if group.tags %}
+    {% if group.tags|length > 0 %}
         {% include "tag/tags.html" with tags=group.tags  %}
     {% endif %}
     <!-- join -->
