--- a/templates/header/import.html
+++ b/templates/header/import.html
@@ -7,7 +7,7 @@
 {% block import %}
 
     <!-- google fonts: first in line because IE -->
-    <link href='http://fonts.googleapis.com/css?family=ABeeZee&text=1234567890ABCDEFGHIJKLMNOPQRSTUVWXYZÆØÅabcdefghijklmnopqrstuvwxyzæøå%20-' rel='stylesheet' type='text/css' />
+    <link href='//fonts.googleapis.com/css?family=ABeeZee&text=1234567890ABCDEFGHIJKLMNOPQRSTUVWXYZÆØÅabcdefghijklmnopqrstuvwxyzæøå%20-' rel='stylesheet' type='text/css' />
 
     <!-- other libraries -->
     <script src="{{ STATIC_URL }}javascripts/jquery.min.js"></script>
